# RK4-Solver-for-1D-KGE

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: gaussian_pulse.py  kink_collision.py
src/kg_solver/: __init__.py  convergence.py  domain.py  energy.py  initial_conditions.py  potentials.py  solver.py  visualization.py
tests/: test_convergence.py  test_energy.py  test_potentials.py  test_solver.py
