[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kg-solver"
version = "1.0.0"
description = "RK4 solver for the 1+1D Klein-Gordon equation with pluggable potentials"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kg_solver"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
